Resolved Sonar code smells and checkstyle issues